# subst_macros

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs
src/nightly/: mod.rs  par_subst.rs  rep_subst.rs  ser_subst.rs
src/stable/: par_subst.rs  rep_subst.rs  ser_subst.rs
